tests/paczka1/fuzzy1/13530156.err
Error in line 4: A821 S258 38,2
Error in line 5: yJD0EGpDSD S481 64,4
Error in line 9: K7zW4B3Wekv S481 35,8
Error in line 15: JdCsYTtGnl A821 96,6
Error in line 26: gGgLYcH79JI A442 74,47
Error in line 34: yJD0EGpDSD A821 33,5
